src2/relu-hipified/log_run_bench.err
main.cu:158:21: error: use of undeclared identifier '__vmaxs4'
  158 |     output[index] = __vmaxs4(input[index], 0);
      |                     ^
1 error generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:50: main.o] Error 1
